# nyc-vehicle-collisions

./: .env.example  .gitignore  README.md  pyproject.toml
bruin/: .bruin.yml.example
bruin/pipeline/: pipeline.yml
bruin/pipeline/assets/ingestion/: collisions_raw.py  download.py  requirements.txt
bruin/pipeline/assets/marts/: dim_contributing_factor.sql  dim_date.sql  dim_location.sql  dim_time.sql  dim_vehicle.sql  fct_collisions.sql  fct_vehicle_involvement.sql
bruin/pipeline/assets/reports/: crash_geo_hotspots.sql  crash_time_of_day.sql  crash_trend.sql  crash_trend_detail.sql  reasons_highsev_collisions_byyear.sql
bruin/pipeline/assets/seeds/: city_holidays_seed.asset.yml  zipcode_borough.csv  zipcode_borough_seed.asset.yml
bruin/pipeline/assets/staging/: stg_collisions.sql
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
